Feat: add shared module