@@ -3,11 +3,14 @@ package org.yascode.service.business.impl;
 import org.springframework.stereotype.Service;
 import org.yascode.persistence.entity.Expense;
 import org.yascode.persistence.repository.ExpenseRepository;
+import org.yascode.persistence.repository.specification.ExpenseSpec;
 import org.yascode.service.business.ExpenseService;
 import org.yascode.shared.dto.ExpenseDto;
 import org.yascode.shared.mapper.ExpenseMapping;
 
+import java.time.LocalDate;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,7 +32,21 @@ public class ExpenseServiceImpl implements ExpenseService {
     public List<ExpenseDto> allExpenses() {
         return expenseRepository.findAll()
                 .stream()
-                .map(expense -> expenseDtoToExpense.toDto(expense))
-                .collect(Collectors.toList());
+                .map(expenseDtoToExpense::toDto)
+                .toList();
+    }
+
+    /**
+     * @param idUser
+     * @param startDate
+     * @param endDate
+     * @return List of expenses for a user between two dates
+     */
+    @Override
+    public List<ExpenseDto> expenseBetween(Optional<Long> idUser, Optional<String> startDate, Optional<String> endDate) {
+        return expenseRepository.findAll(ExpenseSpec.expenseBetween(idUser, startDate.map(LocalDate::parse), endDate.map(LocalDate::parse)))
+                .stream()
+                .map(expenseDtoToExpense::toDto)
+                .toList();
     }
 }
